# CppFinanceApp

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
VirtualStudioProjects/CppFinanceApp/: financeTracker  main.cpp  transactions.txt
VirtualStudioProjects/CppFinanceApp/winapp/FinanceApp/: FileHandler.cpp  FileHandler.h  FinanceApp.cpp  FinanceApp.h  Transaction.cpp  Transaction.h
src/: BackupManager.cpp  BackupManager.h  CurrencyAPI.cpp  CurrencyAPI.h  DataStorage.cpp  DataStorage.h  DownloadThread.cpp  DownloadThread.h  FinanceManager.cpp  FinanceManager.h  HttpClient.cpp  HttpClient.h  UIManager.cpp  UIManager.h  main.cpp
winapp/FinanceApp/: FinanceApp.cpp
